RancherTraining/K8sProjects/PS16PluginOnMyRancher/rancher-deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prestashop16-dev
  annotations:
    field.cattle.io/projectId: c-ql9dz:p-hn8zh
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: prestashop16
  namespace: prestashop16-dev
  labels:
    app: prestashop16
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      app: prestashop16
  template:
    metadata:
      labels:
        app: prestashop16
    spec:
      volumes:
        - name: prestashop-storage
          persistentVolumeClaim:
            claimName: presta-pv-claim
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: prestashop16
        image: ${CICD_REGISTRY}/prestashop16:${CICD_EXECUTION_SEQUENCE}
        imagePullPolicy: IfNotPresent
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: FallbackToLogsOnError
        ports:
        - containerPort: 80
          name: prestashop16
        volumeMounts:
        - name: prestashop-storage
          mountPath: /var/www/html/
---
apiVersion: v1
kind: Service
metadata:
  name: prestashop16
  namespace: prestashop16-dev
spec:
  selector:
    app: prestashop16
  ports:
    - name: main
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prestashop16
  namespace: prestashop16-dev
  annotations:
    http.port: "80"
spec:
  rules:
  - host: ps6-devrancherbox.com
    http:
      paths:
      - backend:
          serviceName: prestashop16
          servicePort: 80
